Set correct CSS styling on .avatar.distorted

--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -5,3 +5,8 @@
    max-width: 300px;
    height: 100%;
 }
+
+.avatar.distorted {
+   width: 200px;
+   height: 400px;
+}
